--- a/Sprint6/site/css/backoffice/menu.css
+++ b/Sprint6/site/css/backoffice/menu.css
@@ -2,7 +2,7 @@
     background-color: #3873cbd2;
 }
 body{
-    background-image: url("../images/pexels-lukas-1419923.jpg");
+    background-image: url("../../images/pexels-lukas-1419923.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -20,7 +20,7 @@ a:hover{
     text-decoration: none;
 }
 a>div{
-    box-shadow: 2px 2px 3px 0px rgba(121, 120, 120, 0.642);
+    box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.25);
     width: 350px;
     height: 350px;
 }
