--- a/Sprint6/site/css/custom.css
+++ b/Sprint6/site/css/custom.css
@@ -27,7 +27,10 @@ html::-webkit-scrollbar-thumb {
 body{
 	font-size: 16px;
 }
-
+#mo{
+    width: 500%;
+    height: 525px;
+}
 img{
 	max-width: 100%;
 }
@@ -1087,6 +1090,7 @@ footer {
 	width: 55px;
 	height: 55px;
 }
+
 /************************************/
 /*****       Media Screens      *****/
 /************************************/
