--- a/Sprint6/site/css/backoffice/menu.css
+++ b/Sprint6/site/css/backoffice/menu.css
@@ -25,9 +25,10 @@ a:hover{
 }
 a>div{
     box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.25);
-    width: 25%;
-    height: 25%;
 }
 .imagee{
-    height:15%;
+    height: 100px;
+}
+#imae{
+    height: 100px;
 }
